# aunt-companion

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: README.md  main.py
app/config/: __init__.py  logging.py  settings.py  tool_settings.py
app/db/: __init__.py  conversations.py  daily_summaries.py  directories.py  messages.py  profile_facts.py  sqlite.py  user_settings.py  users.py
app/domain/: memory.py  prompt_builder.py
app/jobs/: __init__.py  daily_summary.py
app/llm/: __init__.py  base.py  client.py  factory.py  gemini_client.py  pydanticai_runtime.py  tool_context.py  tool_contracts.py  (+2 more)
codex/: codex_cli_prompt.md
config/: llm.example.toml
contract/: companion_contract_v1.md
docs/: SPEC-001-gosha-mvp.md  architecture.md  deployment.md  google_tts_pr_audit.md  memory-model.md  operations.md  overview.md  roadmap.md  server-quickstart.md  tools-runtime-architecture.md
prompts/: system_prompt_ru.txt
scripts/: 00_create_project_tree.sh  01_bootstrap_ubuntu.sh  02_download_models.sh  03_create_env.sh  04_start_llama_server.sh  05_run_bot.sh  06_install_systemd.sh  07_smoke_check.sh
tests/: README.md  test_config.py  test_consistency_cleanup.py  test_db_phase2.py  test_imports.py  test_llm_provider_migration.py  test_operations_hardening.py  test_phase3_text_chat.py  test_pydanticai_runtime.py  test_reminders_repository.py  test_reminders_tool.py  test_telegram_handlers_tool_flow.py  test_tool_contracts.py  test_tool_loader.py  test_tools_factory.py  test_tts_engine.py  test_weather_tool.py  test_web_search_tool.py
(+29 files in other folders)
