[project]
name = "gosha"
version = "0.1.0"
description = "Minimal self-hosted Telegram companion MVP"
requires-python = ">=3.12"
dependencies = [
  "aiogram==3.26.0",
  "aiosqlite>=0.20,<1.0",
  "faster-whisper",
  "ctranslate2",
  "google-cloud-texttospeech",
  "httpx>=0.28,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-dotenv>=1.0,<2.0",
  "orjson>=3.10,<4.0",
  "google-genai>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
